# SFML_FIve_In_A_Row

./: CMakeLists.txt  LICENSE  README.md
include/: AI.h  check.h  player.h
src/: AI.cpp  check.cpp  main.cpp  player.cpp
